fix(css): hide he overflow-x to not get the black color

--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,7 @@ button:hover {
     @apply bg-background text-foreground;
   }
 }
+
+html, body {
+  overflow-x: hidden;
+}
